# ML_common_project_topic

./: .gitignore  BCIC2A_对比.ipynb  Chinese.ipynb  README.md  RNN_Exercise.py  SEED_bestModel.ipynb  SEED_对比模型.ipynb  best_model.pth  best_model_seed.pth  run_all_cbramod.py  run_cbramod_author_downstream.py  run_cbramod_pooling_ablation.py  run_seed_normal_sota_sweep.py  run_sota_bcic2a.py  run_sota_chinese.py  run_sota_finalize.py  run_sota_five_pipeline.sh  run_sota_mdd.py  run_sota_seed.py  run_sota_sleep.py  run_targeted_bcic_seed_sweep.py  seed.py  seed_1.ipynb  seed_2.ipynb  sota_common.py  train.ipynb
reve_eeg/: .gitignore  CITATION.cff  LICENSE  Lenevo可用算力资源汇总.md  README.md  pyproject.toml
reve_eeg/ML_project/: README.md
reve_eeg/data/course_project/: BCI_Speech.md
reve_eeg/hf/: README.md
reve_eeg/hf/reve-base/: README.md  config.json  modeling_reve.py
reve_eeg/hf/reve-positions/: README.md  config.json  position_bank.py  positions.json
reve_eeg/outputs/summary_eval_seed42to46_v1/: formal_aggregate_by_dataset_mode.csv  formal_best_overall_by_dataset.csv  formal_best_seed_by_dataset_mode.csv  formal_runs_all.csv
reve_eeg/preprocessing/: README.md  preprocessing_bciciv2a.py  preprocessing_faced.py  preprocessing_hmc.py  preprocessing_mumtaz.py  preprocessing_physio.py  preprocessing_speech.py  preprocessing_stress.py
reve_eeg/preprocessing/ISRUC/: __init__.py  edf_.py  prepare_ISRUC.py
reve_eeg/scripts/our_tasks/: predict_test.py  run_4090.sh  run_5080.ps1  run_course_eval.py  run_course_optuna.py  run_course_project.py  run_hs.sh  run_l40.sh  scan_h5_datasets.py  summarize_results.py  sync_to_common_repo.ps1  test_course_dataloader.py
reve_eeg/src/: dt.py  dt_opt.py  eval_dt.py  train.py
reve_eeg/src/configs/: README.md  config_dt.yaml  config_train.yaml  resolver.py  validate.py
reve_eeg/src/configs/decoder/: base.yaml
reve_eeg/src/configs/encoder/: base.yaml  (+3 more)
reve_eeg/src/downstream_tasks/: README.md  dataloader_course_h5.py  dataloader_isruc.py  dataloader_moabb.py  dataloader_tuh.py  dataloaders.py  eval_core.py  position_utils.py  train_core.py  utils.py
reve_eeg/src/models/: backbone.py  classifier.py  encoder.py  lora.py  mae.py
reve_eeg/src/utils/: course_project_results_sum.ipynb  data_loading.py  ddp_setup.py  initialization.py  model_utils.py  optim.py  stable_adamw.py  stable_adamw_distributed.py
(+948 files in other folders)
